[package]
name = "rsa-accumulators-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.60"
num-bigint-dig = { version = "0.8.1", features = ["prime"] }
rand = "0.8.5"
rand_chacha = "0.3.1"
wasm-bindgen = "0.2.83"
web-sys = { version = "0.3.60", features = ["Crypto", "Window"] }
getrandom = { version = "0.2", features = ["js"] }

[lib]
crate-type = ["cdylib", "rlib"]
